#1881 : Replacing all occurences of dev@envoimoinscher.com or dev@boxtale.com by informationAPI@envoimoinscher.com

--- a/documentation/Env/Env_ContentCategory.html
+++ b/documentation/Env/Env_ContentCategory.html
@@ -26,7 +26,7 @@
 <p class="short-description">EnvoiMoinsCher API - la classe pour la gestion des catégories et des contenus.</p>
 <p class="description"><p>Vous pouvez l'utiliser pour charger une liste des catégories à afficher dans un &lt;select/&gt;. </p></p>
 	<ul class="tags">
-				<li><span class="field">author:</span> EnvoiMoinsCher &lt;<a href="mailto:dev@envoimoinscher.com">dev@envoimoinscher.com</a>&gt;</li>
+				<li><span class="field">author:</span> EnvoiMoinsCher &lt;<a href="mailto:informationAPI@envoimoinscher.com">informationAPI@envoimoinscher.com</a>&gt;</li>
 				<li><span class="field">version:</span> 1.0</li>
 			</ul>
 		<p class="notes">
