--- a/documentation/Env/Env_Country.html
+++ b/documentation/Env/Env_Country.html
@@ -26,7 +26,7 @@
 <p class="short-description">EnvoiMoinsCher API - la classe pour la gestion des pays.</p>
 <p class="description"><p>La classe peut être utilisée pour le chargement d'un pays ou de toute la liste des pays avec les codes ISO, utilisés par EnvoiMoinsCher.com pour effectuer des devis.</p></p>
 	<ul class="tags">
-				<li><span class="field">author:</span> EnvoiMoinsCher &lt;<a href="mailto:dev@envoimoinscher.com">dev@envoimoinscher.com</a>&gt;</li>
+				<li><span class="field">author:</span> EnvoiMoinsCher &lt;<a href="mailto:informationAPI@envoimoinscher.com">informationAPI@envoimoinscher.com</a>&gt;</li>
 				<li><span class="field">version:</span> 1.0</li>
 			</ul>
 		<p class="notes">
