--- a/documentation/Env/Env_WebService.html
+++ b/documentation/Env/Env_WebService.html
@@ -28,7 +28,7 @@
 <p class="description"><p>La classe-mère de la librairie. Elle se charge 
 de l'interaction entre le serveur client et l'API.</p></p>
 	<ul class="tags">
-				<li><span class="field">author:</span> EnvoiMoinsCher &lt;<a href="mailto:dev@envoimoinscher.com">dev@envoimoinscher.com</a>&gt;</li>
+				<li><span class="field">author:</span> EnvoiMoinsCher &lt;<a href="mailto:informationAPI@envoimoinscher.com">informationAPI@envoimoinscher.com</a>&gt;</li>
 				<li><span class="field">version:</span> 1.0</li>
 			</ul>
 		<p class="notes">
