--- a/documentation/blank.html
+++ b/documentation/blank.html
@@ -12,7 +12,7 @@ Vous pouvez chercher les informations qui vous intéressent dans la colonne de g
 <br /><br />
 Si vous rencontrez le moindre problème, n'hésitez pas à nous contacter : 
         <ul>
-          <li><a href="mailto:dev@boxtale.com">dev@boxtale.com</a></li>
+          <li><a href="mailto:informationAPI@envoimoinscher.com">informationAPI@envoimoinscher.com</a></li>
           <li>par téléphone au +33 (0)1 75 77 37 96</li>
           <li>via skype : dev_envoimoinscher</li>
         </ul>
