--- a/suivi.html
+++ b/suivi.html
@@ -46,7 +46,7 @@
       </code>
       <b>! <small>Il s'agit d'un exemple d'utilisation. Le code ci-dessus n'est pas suffisamment sécurisé. Veuillez ne pas l'utiliser dans votre environnement de production.</small></b>
       <br />
-      <p>Si à votre avis les informations renvoyées ne sont pas complètes, veuillez nous en informer via e-mail (<a href="mailto:dev@boxtale.com">dev@boxtale.com</a>), téléphone (+33 (0)1 75 77 37 96) ou Skype (dev_envoimoinscher).</p>
+      <p>Si à votre avis les informations renvoyées ne sont pas complètes, veuillez nous en informer via e-mail (<a href="mailto:informationAPI@envoimoinscher.com">informationAPI@envoimoinscher.com</a>), téléphone (+33 (0)1 75 77 37 96) ou Skype (dev_envoimoinscher).</p>
       <p>Autres ressources : <a href="index.html">quick start</a>, <a href="documentation">la documentation de la librairie</a>, <a href="parametres.html">les paramètres de la librairie</a>, <a href="changelog.html">le changelog</a></p>
     </div>
   </body>
