--- a/documentation/Env/Env_ParcelPoint.html
+++ b/documentation/Env/Env_ParcelPoint.html
@@ -26,7 +26,7 @@
 <p class="short-description">EnvoiMoinsCher API - la classe pour la gestion des points de proximité.</p>
 <p class="description"><p>Vous pouvez utiliser cette classe pour charger un ou plusieurs points de proximité pour le dépôt et le retrait de votre envoi.</p></p>
 	<ul class="tags">
-				<li><span class="field">author:</span> EnvoiMoinsCher &lt;<a href="mailto:dev@envoimoinscher.com">dev@envoimoinscher.com</a>&gt;</li>
+				<li><span class="field">author:</span> EnvoiMoinsCher &lt;<a href="mailto:informationAPI@envoimoinscher.com">informationAPI@envoimoinscher.com</a>&gt;</li>
 				<li><span class="field">version:</span> 1.0</li>
 			</ul>
 		<p class="notes">
