--- a/documentation/Env/Env_Quotation.html
+++ b/documentation/Env/Env_Quotation.html
@@ -27,7 +27,7 @@
 <p class="description"><p>La classe principale qui sert soit à récupérer la liste des offres, soit
 à passer une commande.</p></p>
 	<ul class="tags">
-				<li><span class="field">author:</span> EnvoiMoinsCher &lt;<a href="mailto:dev@envoimoinscher.com">dev@envoimoinscher.com</a>&gt;</li>
+				<li><span class="field">author:</span> EnvoiMoinsCher &lt;<a href="mailto:informationAPI@envoimoinscher.com">informationAPI@envoimoinscher.com</a>&gt;</li>
 				<li><span class="field">version:</span> 1.0</li>
 			</ul>
 		<p class="notes">
