--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <p>Pour plus d'informations sur les paramètres, la description des classes, veuillez-vous référer à <a href="documentation">la documentation de la librairie</a><!-- et <a href="#" target="_blank">de l'API</a>-->.</p>
       <p>Si vous rencontrez le moindre problème, n'hésitez pas à nous contacter : 
         <ul>
-          <li><a href="mailto:dev@boxtale.com">dev@boxtale.com</a></li>
+          <li><a href="mailto:informationAPI@envoimoinscher.com">informationAPI@envoimoinscher.com</a></li>
           <li>par téléphone au +33 (0)1 75 77 37 96</li>
           <li>via skype : dev_envoimoinscher</li>
         </ul>
