#1881 : Restoring missing author

--- a/documentation/classes/Env_WebService.html
+++ b/documentation/classes/Env_WebService.html
@@ -277,7 +277,22 @@ API and getting the result of this request.</p>
                                                                         </dl>
                     <h2>Tags</h2>
                     <table class="table table-condensed">
-                                            <tr><td colspan="2"><em>None found</em></td></tr>
+                                            <tr>
+                            <th>
+                                author
+                            </th>
+                            <td>
+                                                                    <p>EnvoiMoinsCher <a href="mailto:informationAPI@envoimoinscher.com">informationAPI@envoimoinscher.com</a></p>
+                                                            </td>
+                        </tr>
+                                            <tr>
+                            <th>
+                                version
+                            </th>
+                            <td>
+                                                                    
+                                                            </td>
+                        </tr>
                                         </table>
                 </aside>
             </div>
